// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should work for all qualifiers 1`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      className=""
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <Dropdown
    overlay={
      <ul
        className="menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/owasp_top_10",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            security_reports.owaspTop10.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/sans_top_25",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            security_reports.sansTop25.page
          </Link>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
  <Dropdown
    data-test="administration"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/settings",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            project_settings.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/branches",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            project_branches.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/webhooks",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            webhooks.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/deletion",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            deletion.page
          </Link>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>
</NavBarTabs>
`;

exports[`should work for all qualifiers 2`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/portfolio",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      className=""
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <Dropdown
    overlay={
      <ul
        className="menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/owasp_top_10",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            security_reports.owaspTop10.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/sans_top_25",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            security_reports.sansTop25.page
          </Link>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      view_projects.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
  <Dropdown
    data-test="administration"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/deletion",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            deletion.page
          </Link>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>
</NavBarTabs>
`;

exports[`should work for all qualifiers 3`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/portfolio",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      className=""
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <Dropdown
    overlay={
      <ul
        className="menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/owasp_top_10",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            security_reports.owaspTop10.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/sans_top_25",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            security_reports.sansTop25.page
          </Link>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      view_projects.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
</NavBarTabs>
`;

exports[`should work for all qualifiers 4`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      className=""
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <Dropdown
    overlay={
      <ul
        className="menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/owasp_top_10",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            security_reports.owaspTop10.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/sans_top_25",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            security_reports.sansTop25.page
          </Link>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      view_projects.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
  <Dropdown
    data-test="administration"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/deletion",
                "query": Object {
                  "id": "foo",
                },
              }
            }
          >
            deletion.page
          </Link>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>
</NavBarTabs>
`;

exports[`should work for long-living branches 1`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      className=""
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": "release",
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <Dropdown
    overlay={
      <ul
        className="menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/owasp_top_10",
                "query": Object {
                  "branch": "release",
                  "id": "foo",
                },
              }
            }
          >
            security_reports.owaspTop10.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/sans_top_25",
                "query": Object {
                  "branch": "release",
                  "id": "foo",
                },
              }
            }
          >
            security_reports.sansTop25.page
          </Link>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
</NavBarTabs>
`;

exports[`should work for long-living branches 2`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      className=""
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": "release",
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <Dropdown
    overlay={
      <ul
        className="menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/owasp_top_10",
                "query": Object {
                  "branch": "release",
                  "id": "foo",
                },
              }
            }
          >
            security_reports.owaspTop10.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "pathname": "/project/security_reports/sans_top_25",
                "query": Object {
                  "branch": "release",
                  "id": "foo",
                },
              }
            }
          >
            security_reports.sansTop25.page
          </Link>
        </li>
      </ul>
    }
    tagName="li"
  >
    <Component />
  </Dropdown>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
</NavBarTabs>
`;

exports[`should work for short-living branches 1`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": "feature",
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      className=""
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": "feature",
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": "feature",
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": "feature",
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
</NavBarTabs>
`;

exports[`should work with extensions 1`] = `
<Dropdown
  data-test="extensions"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-foo",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          ComponentFoo
        </Link>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should work with extensions 2`] = `
<Dropdown
  data-test="administration"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/settings",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_settings.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/branches",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_branches.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/webhooks",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          webhooks.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/admin/extension/foo",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          Foo
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/deletion",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          deletion.page
        </Link>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should work with multiple extensions 1`] = `
<Dropdown
  data-test="extensions"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-foo",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          ComponentFoo
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-bar",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          ComponentBar
        </Link>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;

exports[`should work with multiple extensions 2`] = `
<Dropdown
  data-test="administration"
  overlay={
    <ul
      className="menu"
    >
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/settings",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_settings.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/branches",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_branches.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/webhooks",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          webhooks.page
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/admin/extension/foo",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          Foo
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/admin/extension/bar",
              "query": Object {
                "id": "foo",
                "qualifier": "TRK",
              },
            }
          }
        >
          Bar
        </Link>
      </li>
      <li>
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/deletion",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          deletion.page
        </Link>
      </li>
    </ul>
  }
  tagName="li"
>
  <Component />
</Dropdown>
`;
